fix up posts to be compatible with mdx

--- a/src/content/blog/2011-04-24-entrepreneurship-advocacy-at-cu-boulder.mdx
+++ b/src/content/blog/2011-04-24-entrepreneurship-advocacy-at-cu-boulder.mdx
@@ -30,11 +30,11 @@ This is where I need your help. The department seems open to this idea, but we n
 Denver/Boulder startup community. With your help, we can foster a stronger relationship between the thriving local
 startup community and educational institutions.
 
-If you're interested in helping out, please shoot me an email (limmer {{at}} colorado {{dot}} edu) with Entrepreneurship
-in the subject line. Let me know which company you represent and how you and/or your company would like to be involved.
-Examples of possible involvement include: making a donation to support the paid position, volunteering to help teach a
-class, guest lecturing, hosting a tech talk for students, sponsoring interns, sponsoring a sophomore or senior project,
-etc. We are open to additional ways to get you involved - just let me know!
+If you're interested in helping out, please shoot me an email (limmer \{\{at\}\} colorado \{\{dot\}\} edu) with
+Entrepreneurship in the subject line. Let me know which company you represent and how you and/or your company would like
+to be involved. Examples of possible involvement include: making a donation to support the paid position, volunteering
+to help teach a class, guest lecturing, hosting a tech talk for students, sponsoring interns, sponsoring a sophomore or
+senior project, etc. We are open to additional ways to get you involved - just let me know!
 
 With your help we can make this idea a reality and build lasting connections between the Denver/Boulder tech community
 and our prestigious educational institutions. Join me!
