--- a/src/content/blog/2011-04-28-object-oriented-analysis-and-design-final-project/index.mdx
+++ b/src/content/blog/2011-04-28-object-oriented-analysis-and-design-final-project/index.mdx
@@ -8,6 +8,8 @@ description:
   Boulder. The project was worked by Ben Limmer and Zac Clark"
 ---
 
+import OOHw9 from "./assets/OO_limmer_clark_hw9.pdf";
+
 Hi Readers!
 
 Here's some more follow-up info on some work I've been completing for my Object-Oriented Analysis and Design course. I
@@ -19,5 +21,4 @@ calendar application, then check the RTD website to see when to catch the bus.
 Because of this we decided to create LaunchPad, an application that integrated a series of widgets...your "LaunchPad" in
 the morning. We developed the application entirely in Rails and made it very simple to extend to additional widgets. If
 you want to check out the source code, see [our Github](http://www.github.com/spyyddir/launchpad) project site and take
-a look at our [final submission](/assets/attachments/2011/04/OO_limmer_clark_hw9.pdf) for screenshots and design
-information.
+a look at our <a href={OOHw9}>final submission</a> for screenshots and design information.
