--- a/src/content/blog/2013-08-31-squash-your-commits.mdx
+++ b/src/content/blog/2013-08-31-squash-your-commits.mdx
@@ -15,23 +15,25 @@ time to focus on software development, but it’s quite a change heading back ov
 One thing I’ve noticed as I’ve moved back into a codebase with a different set of developers is that not many folks
 squash their git commits, so I end up seeing lots of less-meaningful commits in the main branch:
 
-    commit 4b8995a9afe261f6a2ce55be00a565da29f78718
-    Author: Bob Loblaw
-    Date: Sat Jul 13 16:08:31 2013 -0600
+```console
+commit 4b8995a9afe261f6a2ce55be00a565da29f78718
+Author: Bob Loblaw
+Date: Sat Jul 13 16:08:31 2013 -0600
 
-    The stuffs are working now!
+The stuffs are working now!
 
-    commit f2f3e29e3f92abe483d75599e9259232ee73fd26
-    Author: Bob Loblaw
-    Date: Sat Jul 13 15:57:11 2013 -0600
+commit f2f3e29e3f92abe483d75599e9259232ee73fd26
+Author: Bob Loblaw
+Date: Sat Jul 13 15:57:11 2013 -0600
 
-    Getting closer...
+Getting closer...
 
-    commit 3e45e745f40245cb5bacff300c858a38b9d3f0b3
-    Author: Bob Loblaw
-    Date: Sat Jul 13 15:02:49 2013 -0600
+commit 3e45e745f40245cb5bacff300c858a38b9d3f0b3
+Author: Bob Loblaw
+Date: Sat Jul 13 15:02:49 2013 -0600
 
-    Some updates.
+Some updates.
+```
 
 Yuck!
 
