--- a/src/content/blog/2014-10-28-ember-computed-is-your-friend.mdx
+++ b/src/content/blog/2014-10-28-ember-computed-is-your-friend.mdx
@@ -9,11 +9,20 @@ description: "Ember.computed is powerful. It has methods that reduce boilerplate
 I recently got turned on to a much more readable method for writing computed properties in Ember with CoffeeScript by
 way of [Alex Speller](http://alexspeller.com/)'s talk at this year's EmberFest,
 [The mistakes everyone makes with Ember.JS - Avoiding Common Pitfalls](https://www.youtube.com/watch?v=vRfr2nrsX14). I
-had previously been writing computed properties like this: {% highlight coffeescript %} foo: (-> "foo#{@get('bar')}"
-).property('bar') {% endhighlight %}
+had previously been writing computed properties like this:
+
+```coffeescript
+foo: (->
+  "foo#{@get('bar')}"
+).property('bar')
+```
 
 Which works out just fine, but it's much more readable to take this same idea and turn it into this:
-{% highlight coffeescript %} foo: Em.computed 'bar', -> "foo#{@get('bar')}" {% endhighlight %}
+
+```coffeescript
+foo: Em.computed 'bar', ->
+  "foo#{@get('bar')}"
+```
 
 This new method of writing computed properties made me investigate the
 [Ember namespace documentation](http://emberjs.com/api/classes/Ember.html), which opened my eyes to a ton of shorthand
@@ -23,23 +32,48 @@ that you should be utilizing. I highly recommend that you look at the
 
 ## Greater Than Comparisons
 
-Before: {% highlight coffeescript %} isElementGreater: Em.computed 'value', -> @get('value') > 10 {% endhighlight %}
+Before:
 
-After: {% highlight coffeescript %} isElementGreater: Em.computed.gt 'value', 10 {% endhighlight %}
+```coffeescript
+isElementGreater: Em.computed 'value', ->
+  @get('value') > 10
+```
+
+After:
+
+```coffeescript
+isElementGreater: Em.computed.gt 'value', 10
+```
 
 ## Logical 'Or'
 
-Before: {% highlight coffeescript %} orAllTheThings: Em.computed 'value1', 'value2', 'value3' -> @get('value1') ||
-@get('value2') || @get('value3') {% endhighlight %}
+Before:
 
-After: {% highlight coffeescript %} orAllTheThings: Em.computed.or 'value1', 'value2', 'value3' {% endhighlight %}
+```coffeescript
+orAllTheThings: Em.computed 'value1', 'value2', 'value3', ->
+  @get('value1') || @get('value2') || @get('value3')
+```
+
+After:
+
+```coffeescript
+orAllTheThings: Em.computed.or 'value1', 'value2', 'value3'
+```
 
 ## Intersections
 
-Before: {% highlight coffeescript %} arrIntersect: Em.computed 'arr1', 'arr2', -> # utilize lodash/underscore # or
-(gasp) write it yourself \_.intersection(@get('arr1'), @get('arr2')) {% endhighlight %}
+Before:
 
-After: {% highlight coffeescript %} arrIntersect: Em.computed.intersect 'arr1', 'arr2' {% endhighlight %}
+```coffeescript
+arrIntersect: Em.computed 'arr1', 'arr2', -> # utilize lodash/underscore # or
+(gasp) write it yourself \_.intersection(@get('arr1'), @get('arr2'))
+```
+
+After:
+
+```coffeescript
+arrIntersect: Em.computed.intersect 'arr1', 'arr2'
+```
 
 # Read the Docs!
 
