--- a/src/content/blog/2014-12-07-how-to-get-a-job-after-school/index.mdx
+++ b/src/content/blog/2014-12-07-how-to-get-a-job-after-school/index.mdx
@@ -9,6 +9,8 @@ description:
   students at University of Colorado at Boulder."
 ---
 
+import GettingAJobAfterSchool from "./assets/getting-a-job-after-school.pdf";
+
 Every school year, I give a talk to CSCI 1000: Computer Science as a field of work and study class at the University of
 Colorado at Boulder. This class is required for all computer science major students and is a series of lectures from
 people working in the Computer Science field.
@@ -16,5 +18,5 @@ people working in the Computer Science field.
 This year, I polled students to see what they were most interested in learning about, and they resoundingly expressed
 interest in learning how to get a job after school.
 
-Check out my <a href="/assets/documents/2014/12/getting-a-job-after-school.pdf">slide deck</a> to learn what you need to
-do in school to get a job after attending a Computer Science program.
+Check out my <a href={GettingAJobAfterSchool}>slide deck</a> to learn what you need to do in school to get a job after
+attending a Computer Science program.
