--- a/src/content/blog/2015-03-21-the-road-to-ember-cli.mdx
+++ b/src/content/blog/2015-03-21-the-road-to-ember-cli.mdx
@@ -7,9 +7,9 @@ tags:
 description: "A meta post with links to helpful resources and examples to migrate a project to Ember CLI."
 ---
 
-At Ibotta, we've been running an EmberJS app for about a year. Ember [seemed the obvious
-choice]({% post_url 2014-08-22-getting-started-with-ember-js %}) to rewrite our marketing-centric webapp and we were
-able to turn around a brand new site in the span of just a few months.
+At Ibotta, we've been running an EmberJS app for about a year. Ember
+[seemed the obvious choice](/blog/2014/08/22/getting-started-with-ember-js) to rewrite our marketing-centric webapp and
+we were able to turn around a brand new site in the span of just a few months.
 
 When we started project, there was no first-class way to build and deploy the app.
 [Ember App Kit](https://github.com/stefanpenner/ember-app-kit) existed, but didn't quite fit the bill for everything we
@@ -30,5 +30,5 @@ This blog post will track other posts that document our journey to Ember CLI.
 
 # Ember CLI Related Posts
 
-- [Ember CLI Testing with Jenkins CI]({% post_url 2015-03-22-ember-cli-testing-with-jenkins %})
-- [Migrating a CoffeeScript Ember Application to Ember CLI]({% post_url 2015-03-23-coffeescript-to-ember-cli %})
+- [Ember CLI Testing with Jenkins CI](/blog/2015/03/22/ember-cli-testing-with-jenkins)
+- [Migrating a CoffeeScript Ember Application to Ember CLI](/blog/2015/03/23/coffeescript-to-ember-cli)
