--- a/src/content/blog/2015-05-31-deploying-a-location-aware-ember-app.mdx
+++ b/src/content/blog/2015-05-31-deploying-a-location-aware-ember-app.mdx
@@ -12,8 +12,7 @@ and a simple ExpressJS server."
 This week I spoke at the May 2015 [EmberJS Denver Meetup](http://www.meetup.com/Ember-js-Denver/) and showed how to
 easily create an EmberJS application that dynamically chooses a language based on what country your IP address is in.
 
-<div class="center">
-  <br />
+<div class="flex justify-center">
   <iframe
     width="560"
     height="315"
