--- a/src/content/blog/2015-11-08-ember-cli-deploy-0-5.mdx
+++ b/src/content/blog/2015-11-08-ember-cli-deploy-0-5.mdx
@@ -8,7 +8,7 @@ description: "Now that ember-cli-deploy 0.5.x is live, an update on existing pro
 and an exciting announcement about a plugin to notify HipChat about deploys and activations."
 ---
 
-I've [previously spoken]( {% post_url 2015-05-31-deploying-a-location-aware-ember-app %} ) about
+I've [previously spoken](/blog/2015/05/31/deploying-a-location-aware-ember-app) about
 [ember-cli-deploy](https://github.com/ember-cli/ember-cli-deploy) and how it makes your deployments safe and easy. This
 weekend I've been hacking against the new ember-cli-deploy pipeline (0.5.x+) and I have a few updates to share.
 
@@ -30,9 +30,9 @@ pipeline.
 I've updated the
 [client](https://github.com/blimmer/location-aware-ember/commit/b4bebd982d795d9d4b805ea7dd013f6b4da3c5d7) and
 [server](https://github.com/blimmer/location-aware-ember-server/commit/cb5e49781d5d78ee6a56ab6ff7b7adfaf45bf117)
-components of my [location-aware-ember]( {% post_url 2015-05-31-deploying-a-location-aware-ember-app %} ) project, so
-you can see the changes you'll need to make to go from 0.4.x to 0.5.x of ember-cli-deploy. You can also have a look at
-the [official upgrade docs](http://ember-cli-deploy.com/docs/v1.0.x/upgrading/) for more info.
+components of my [location-aware-ember](/blog/2015/05/31/deploying-a-location-aware-ember-app) project, so you can see
+the changes you'll need to make to go from 0.4.x to 0.5.x of ember-cli-deploy. You can also have a look at the
+[official upgrade docs](http://ember-cli-deploy.com/docs/v1.0.x/upgrading/) for more info.
 
 ## node-ember-cli-deploy-redis
 
