--- a/src/content/blog/2021-01-29-circleci-jest-cache.mdx
+++ b/src/content/blog/2021-01-29-circleci-jest-cache.mdx
@@ -74,7 +74,7 @@ Jest stores useful information in the cache, which improves the performance of y
 If you want to learn more about the jest cache, check out [Jest Architecture video](https://youtu.be/3YDiloj8_d0) on
 YouTube.
 
-<div class="center">
+<div class="flex justify-center">
   <iframe
     width="560"
     height="315"
