--- a/src/content/blog/2013-12-30-airplay-not-working-try-this.mdx
+++ b/src/content/blog/2013-12-30-airplay-not-working-try-this.mdx
@@ -34,6 +34,8 @@ Oh, you fancy, huh?
 
 If you're comfortable working in a shell, simply open one up and run:
 
-    sudo kill `ps -ax | grep 'coreaudiod' | grep 'sbin' | awk '{print $1}'`
+```shell
+sudo kill `ps -ax | grep 'coreaudiod' | grep 'sbin' | awk '{print $1}'`
+```
 
 That should do it! You should up and running again, enjoying your tunes on your AirPlay speakers.
