--- a/src/content/blog/2015-03-29-ember-cli-server-variables-addon.mdx
+++ b/src/content/blog/2015-03-29-ember-cli-server-variables-addon.mdx
@@ -22,7 +22,7 @@ instance, we use [Node GeoIP](https://github.com/bluesmoon/node-geoip) to determ
 Because Ember CLI generates an index.html file with the `ember build` command, and ember-deploy saves this file off to
 Redis, we needed to come up with a way to not build the index.html file on our application server at request-time.
 
-I [briefly touched]({% post_url 2015-03-23-coffeescript-to-ember-cli %}#building) on our plans to use
+I [briefly touched](/blog/2015/03/23/coffeescript-to-ember-cli#building) on our plans to use
 [ember-cli-deploy](https://github.com/ember-cli/ember-cli-deploy) to improve our deployment system. Pending support for
 a [configuration-only](https://github.com/ember-cli/ember-cli-deploy/issues/89) deploy, we will need to modify the
 index.html page using a library like [CheerioJS](https://github.com/cheeriojs/cheerio) in our Express server before we
@@ -38,39 +38,43 @@ to install and configure it.
 
 ## How it Works
 
-Ever noticed the {%raw%}`{{content-for}}`{%endraw%} helpers in the stock Ember CLI index.html file? The Ember CLI add-on
-environment allows add-ons to implement a `contentFor` function in the index.js file that outputs the returned string
-directly into the page. In our case, it's super handy because we need to write out meta tags into the head of the file
-that contain request-specific information.
+Ever noticed the `{{content-for}}` helpers in the stock Ember CLI index.html file? The Ember CLI add-on environment
+allows add-ons to implement a `contentFor` function in the index.js file that outputs the returned string directly into
+the page. In our case, it's super handy because we need to write out meta tags into the head of the file that contain
+request-specific information.
 
-All you have to do is place a {%raw%}`{{content-for 'server-variables'}}`{%endraw%} helper in your index.html file
-provide an array of variables you'd like added to the page. The add-on does everything else to get those meta variables
-into the head tag. You can also provide sane defaults for development mode, when your app server won't be running to
-fill in the variables.
+All you have to do is place a `{{content-for 'server-variables'}}` helper in your index.html file provide an array of
+variables you'd like added to the page. The add-on does everything else to get those meta variables into the head tag.
+You can also provide sane defaults for development mode, when your app server won't be running to fill in the variables.
 
 ## Example
 
-After adding the {%raw%}`{{content-for 'server-variables'}}`{%endraw%} helper, edit your `environment.js` file with a
-list of the variables you want added and (optionally) with defaults for development.
+After adding the `{{content-for 'server-variables'}}` helper, edit your `environment.js` file with a list of the
+variables you want added and (optionally) with defaults for development.
 
-{% highlight javascript %} var ENV = { ...
+```javascript
+var ENV = { ...
 
 serverVariables: { tagPrefix: 'prefix', vars: ['token', 'location'] } };
 
 if (environment === 'development') { ENV.serverVariables.defaults = { token: 'example', location: 'Denver' }; }
-{% endhighlight %}
+```
 
 To confirm it's working, fire up development server `ember s` and check out the head tag. You'll notice two new meta
 tags:
 
-    <meta name="prefix-token" content="example">
-    <meta name="prefix-location" content="Denver">
+```html
+<meta name="prefix-token" content="example" /> <meta name="prefix-location" content="Denver" />
+```
 
 Now that you're all setup, you can use the convenience service implemented by the add-on to fetch the property.
 
-{% highlight javascript %} MyController = Ember.Controller.extend({ serverVariablesService:
-Ember.inject.service('serverVariables'), userLocation: Ember.computed.reads('serverVariablesService.location') });
-{% endhighlight %}
+```javascript
+MyController = Ember.Controller.extend({
+  serverVariablesService: Ember.inject.service("serverVariables"),
+  userLocation: Ember.computed.reads("serverVariablesService.location"),
+});
+```
 
 Great, everything is working in development now. Now the last task is to modify your application server to find the tag
 and replace it with the appropriate content for each request. This add-on doesn't care how you implement things on your
